INGRESS/default-service/demo-2/default-service-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-app-2
  template:
    metadata:
      labels:
        app: default-app-2
    spec:
      containers:
      - name: nginx
        image: nginx:1.25.2
        command:
        - sh
        - -c
        - |
          cat <<EOF >/etc/nginx/conf.d/default.conf
          server {
              listen 80;
              server_name _;

              location / {
                  return 200 "Hello from DEFAULT backend 2\n";
                  add_header Content-Type text/plain;
              }
          }
          EOF

          nginx -g 'daemon off;'

# Now every path returns: Hello from DEFAULT backend
---
apiVersion: v1
kind: Service
metadata:
  name: default-service-2
spec:
  selector:
    app: default-app-2
  ports:
  - port: 80
