INGRESS/default-service/demo-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo1
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  # Any request mathces the host but not the path will be routed to the this default backend service. If you want to use a different default backend service, you can change the name and port below.
  defaultBackend:
    service:
      name: default-service-1
      port:
        number: 80
  rules:
  - host: app.example.com
    http:
      paths:
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: login-service
            port:
              number: 80

  - host: demo.example.com
    http:
      paths:
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 80

      # - path: /.* #Same as default backend, so commented out. If you want to use this, you can uncomment it and remove the default backend section above.
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: default-service
      #       port:
      #         number: 80
